Set user role, update example config

--- a/config.py.example
+++ b/config.py.example
@@ -1,1 +1,8 @@
 DISCORD_TOKEN = ""
+VERIFICATION_CHANNEL = ""
+VERIFIED_ROLE = ""
+POST_URL = ""
+REDDIT_ID = ""
+REDDIT_SECRET = ""
+REDDIT_USER = ""
+REDDIT_PASS = ""
