Update example config

--- a/config.py.example
+++ b/config.py.example
@@ -1,7 +1,7 @@
 DISCORD_TOKEN = ""
-VERIFICATION_CHANNEL = ""
-VERIFIED_ROLE = ""
-POST_URL = ""
+VERIFICATION_CHANNEL = "430740118047817751"
+VERIFIED_ROLE = "Verified T17"
+POST_URL = "https://www.reddit.com/r/ccKufiPrFaShleWoli0/comments/89etq9/circle_of_trust_warplanning_discord/"
 REDDIT_ID = ""
 REDDIT_SECRET = ""
 REDDIT_USER = ""
